--- a/index.html
+++ b/index.html
@@ -1,2 +1,11 @@
-<h1>Hello GitHub</h1>
-<p>Mera pehla project</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Arjawan's First Website</title>
+</head>
+<body>
+  <h1 style="color: purple; text-align: center;">Hello, I’m Arjawan!</h1>
+  <p style="text-align: center;">Welcome to my first live website using GitHub Pages 🌐✨</p>
+</body>
+</html>
