--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Arjawan's First Website</title>
-</head>
-<body>
-  <h1 style="color: purple; text-align: center;">Hello, I’m Arjawan!</h1>
-  <p style="text-align: center;">Welcome to my first live website using GitHub Pages 🌐✨</p>
-</body>
+<html>
+  <head>
+    <title>Arjawan's Page</title>
+  </head>
+  <body>
+    <h1>Welcome to Arjawan’s Website!</h1>
+    <p>This is my very first coded web page 😍</p>
+  </body>
 </html>
