--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Arjawan's Page</title>
-  </head>
-  <body>
-    <h1>Welcome to Arjawan’s Website!</h1>
-    <p>This is my very first coded web page 😍</p>
-  </body>
+<head>
+  <title>Class 2 - Arjawan's Page</title>
+</head>
+<body>
+  <h1>Hello from Arjawan!</h1>
+  <h2>I’m Learning HTML Tags</h2>
+
+  <p>This is my paragraph. I'm excited to become a web developer! 💖</p>
+
+  <img src="https://via.placeholder.com/200" alt="Placeholder Image">
+
+  <p>Visit my <a href="https://github.com/10108943/test-repo" target="_blank">GitHub Repo</a></p>
+
+  <p>Line 1<br>Line 2<br>Line 3</p>
+</body>
 </html>
