--- a/index.html
+++ b/index.html
@@ -1,17 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Class 2 - Arjawan's Page</title>
+  <title>Class 3 - Lists & Formatting</title>
 </head>
 <body>
-  <h1>Hello from Arjawan!</h1>
-  <h2>I’m Learning HTML Tags</h2>
+  <h1>My Daily Routine</h1>
+  
+  <h2>Unordered List</h2>
+  <ul>
+    <li>Brush</li>
+    <li>Pray</li>
+    <li>Learn HTML</li>
+  </ul>
 
-  <p>This is my paragraph. I'm excited to become a web developer! 💖</p>
+  <h2>Ordered List</h2>
+  <ol>
+    <li>Wake up</li>
+    <li>Open Laptop</li>
+    <li>Start Coding</li>
+  </ol>
 
-  <img src="https://via.placeholder.com/200" alt="Placeholder Image">
+  <h2>Formatting</h2>
+  <p>This is <b>bold</b>, <i>italic</i>, and <u>underlined</u> text.</p>
 
-  <p>Visit my <a href="https://github.com/10108943/test-repo" target="_blank">GitHub Repo</a></p>
+  <hr>
+
+  <p>Water formula is H<sub>2</sub>O and 2<sup>4</sup> = 16</p>
 
   <p>Line 1<br>Line 2<br>Line 3</p>
 </body>
