--- a/index.html
+++ b/index.html
@@ -1,32 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Class 3 - Lists & Formatting</title>
+  <title>Class 4 - Forms</title>
 </head>
 <body>
-  <h1>My Daily Routine</h1>
-  
-  <h2>Unordered List</h2>
-  <ul>
-    <li>Brush</li>
-    <li>Pray</li>
-    <li>Learn HTML</li>
-  </ul>
+  <h1>Contact Me</h1>
 
-  <h2>Ordered List</h2>
-  <ol>
-    <li>Wake up</li>
-    <li>Open Laptop</li>
-    <li>Start Coding</li>
-  </ol>
+  <form action="#">
+    <label>Full Name:</label><br>
+    <input type="text" placeholder="Enter your name"><br><br>
 
-  <h2>Formatting</h2>
-  <p>This is <b>bold</b>, <i>italic</i>, and <u>underlined</u> text.</p>
+    <label>Email:</label><br>
+    <input type="email" placeholder="Enter your email"><br><br>
 
-  <hr>
+    <label>Password:</label><br>
+    <input type="password" placeholder="Enter password"><br><br>
 
-  <p>Water formula is H<sub>2</sub>O and 2<sup>4</sup> = 16</p>
+    <label>Gender:</label><br>
+    <input type="radio" name="gender"> Male
+    <input type="radio" name="gender"> Female<br><br>
 
-  <p>Line 1<br>Line 2<br>Line 3</p>
+    <label>Skills:</label><br>
+    <input type="checkbox"> HTML
+    <input type="checkbox"> CSS
+    <input type="checkbox"> JavaScript<br><br>
+
+    <label>Your Message:</label><br>
+    <textarea rows="4" cols="30" placeholder="Write your message..."></textarea><br><br>
+
+    <input type="submit" value="Submit">
+  </form>
 </body>
 </html>
