--- a/index.html
+++ b/index.html
@@ -1,37 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Class 5 - HTML Tables</title>
+  <title>Class 6 - Media in HTML</title>
 </head>
 <body>
-  <h1>Student Result Sheet</h1>
 
-  <table border="1" cellpadding="8" cellspacing="0">
-    <tr>
-      <th>Roll No</th>
-      <th>Name</th>
-      <th>Marks</th>
-      <th>Grade</th>
-    </tr>
-    <tr>
-      <td>01</td>
-      <td>Arjawan</td>
-      <td>95</td>
-      <td>A+</td>
-    </tr>
-    <tr>
-      <td>02</td>
-      <td>Areeba</td>
-      <td>88</td>
-      <td>A</td>
-    </tr>
-    <tr>
-      <td>03</td>
-      <td>Iqra</td>
-      <td>76</td>
-      <td>B</td>
-    </tr>
-  </table>
+  <h1>Welcome to My Media Page</h1>
+
+  <h2>📷 Image</h2>
+  <img src="https://via.placeholder.com/200" alt="Placeholder image" width="200">
+
+  <h2>🎥 Video</h2>
+  <video width="320" height="240" controls>
+    <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
+    Your browser does not support video tag.
+  </video>
+
+  <h2>🔊 Audio</h2>
+  <audio controls>
+    <source src="https://www.w3schools.com/html/horse.mp3" type="audio/mpeg">
+    Your browser does not support audio tag.
+  </audio>
 
 </body>
 </html>
