--- a/index.html
+++ b/index.html
@@ -1,26 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Class 6 - Media in HTML</title>
+  <title>Class 7 - HTML Links</title>
 </head>
 <body>
 
-  <h1>Welcome to My Media Page</h1>
+  <h1>Welcome to My Links Page</h1>
 
-  <h2>📷 Image</h2>
-  <img src="https://via.placeholder.com/200" alt="Placeholder image" width="200">
+  <h2>🌐 External Link</h2>
+  <a href="https://www.google.com" target="_blank">Open Google</a>
 
-  <h2>🎥 Video</h2>
-  <video width="320" height="240" controls>
-    <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
-    Your browser does not support video tag.
-  </video>
+  <h2>🧭 Internal Link</h2>
+  <a href="#about">Go to About Section</a>
 
-  <h2>🔊 Audio</h2>
-  <audio controls>
-    <source src="https://www.w3schools.com/html/horse.mp3" type="audio/mpeg">
-    Your browser does not support audio tag.
-  </audio>
+  <h2>✉️ Email Link</h2>
+  <a href="mailto:arjawan@example.com">Send me an email</a>
+
+  <h2>📥 Download Link</h2>
+  <a href="https://www.w3.org/WAI/ER/tests/xhtml/testfiles/resources/pdf/dummy.pdf" download>
+    Download Sample PDF
+  </a>
+
+  <hr><br><br><br><br><br><br><br><br><br>
+
+  <!-- Internal Link Section -->
+  <h2 id="about">📘 About Section</h2>
+  <p>This is the about section that you jumped to!</p>
 
 </body>
 </html>
