--- a/index.html
+++ b/index.html
@@ -1,53 +1,33 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Class 12 - Hover & Button Styling</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #f0f0f0;
-      padding: 30px;
-      text-align: center;
-    }
-
-    .btn {
-      background-color: #4CAF50;
-      color: white;
-      padding: 15px 30px;
-      font-size: 18px;
-      border: none;
-      border-radius: 10px;
-      cursor: pointer;
-      transition: background-color 0.4s ease, transform 0.3s;
-    }
-
-    .btn:hover {
-      background-color: #388e3c;
-      transform: scale(1.1);
-    }
-
-    .box {
-      background-color: #ffccbc;
-      padding: 20px;
-      margin: 30px auto;
-      width: 300px;
-      transition: background-color 0.5s ease;
-    }
-
-    .box:hover {
-      background-color: #ff8a65;
-    }
-  </style>
+  <meta charset="UTF-8">
+  <title>List Practice</title>
 </head>
 <body>
 
-  <h1>CSS Hover & Transitions</h1>
+  <h2>Unordered List</h2>
+  <ul>
+    <li>Tea</li>
+    <li>Coffee</li>
+    <li>Milk</li>
+  </ul>
 
-  <div class="box">
-    Hover on this box to change color 🎨
-  </div>
+  <h2>Ordered List</h2>
+  <ol>
+    <li>Wake up</li>
+    <li>Brush Teeth</li>
+    <li>Have Breakfast</li>
+  </ol>
 
-  <button class="btn">Hover Me 💫</button>
+  <h2>Description List</h2>
+  <dl>
+    <dt>HTML</dt>
+    <dd>HyperText Markup Language</dd>
+
+    <dt>CSS</dt>
+    <dd>Cascading Style Sheets</dd>
+  </dl>
 
 </body>
 </html>
