--- a/index.html
+++ b/index.html
@@ -1,33 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>List Practice</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>HTML Lists - Class 14</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      padding: 30px;
+      background-color: #f0f8ff;
+    }
+    h1 {
+      color: #333;
+    }
+    ul, ol {
+      padding-left: 25px;
+    }
+    li {
+      margin: 8px 0;
+    }
+  </style>
 </head>
 <body>
 
-  <h2>Unordered List</h2>
+  <h1>🛒 My Shopping List</h1>
   <ul>
-    <li>Tea</li>
-    <li>Coffee</li>
     <li>Milk</li>
+    <li>Eggs</li>
+    <li>Bread</li>
+    <li>Fruits</li>
   </ul>
 
-  <h2>Ordered List</h2>
+  <h1>📋 Steps to Make Tea</h1>
   <ol>
-    <li>Wake up</li>
-    <li>Brush Teeth</li>
-    <li>Have Breakfast</li>
+    <li>Boil water</li>
+    <li>Add tea leaves</li>
+    <li>Let it simmer</li>
+    <li>Strain and serve</li>
   </ol>
-
-  <h2>Description List</h2>
-  <dl>
-    <dt>HTML</dt>
-    <dd>HyperText Markup Language</dd>
-
-    <dt>CSS</dt>
-    <dd>Cascading Style Sheets</dd>
-  </dl>
 
 </body>
 </html>
