--- a/index.html
+++ b/index.html
@@ -2,42 +2,24 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>HTML Lists - Class 14</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>CSS Box Shadow</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      padding: 30px;
-      background-color: #f0f8ff;
-    }
-    h1 {
-      color: #333;
-    }
-    ul, ol {
-      padding-left: 25px;
-    }
-    li {
-      margin: 8px 0;
+    .box {
+      width: 200px;
+      height: 100px;
+      background-color: #ffd700;
+      margin: 50px auto;
+      text-align: center;
+      line-height: 100px;
+      font-weight: bold;
+      font-size: 18px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
     }
   </style>
 </head>
 <body>
-
-  <h1>🛒 My Shopping List</h1>
-  <ul>
-    <li>Milk</li>
-    <li>Eggs</li>
-    <li>Bread</li>
-    <li>Fruits</li>
-  </ul>
-
-  <h1>📋 Steps to Make Tea</h1>
-  <ol>
-    <li>Boil water</li>
-    <li>Add tea leaves</li>
-    <li>Let it simmer</li>
-    <li>Strain and serve</li>
-  </ol>
-
+  <h2>Box Shadow Example</h2>
+  <div class="box">Shadow Box 🌟</div>
 </body>
 </html>
