--- a/index.html
+++ b/index.html
@@ -3,31 +3,64 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Box Shadow Example</title>
+  <title>Class 15 - HTML Tables</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      padding: 50px;
-      background-color: #f0f0f0;
+      background-color: #f8f9fa;
+      padding: 20px;
+    }
+    table {
+      width: 60%;
+      border-collapse: collapse;
+      margin: 20px auto;
+    }
+    th, td {
+      border: 1px solid #444;
+      padding: 12px;
       text-align: center;
     }
-
-    .shadow-box {
-      width: 250px;
-      height: 150px;
-      background-color: #ffffff;
-      margin: 0 auto;
-      padding: 20px;
-      box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
-      border-radius: 10px;
+    th {
+      background-color: #007bff;
+      color: white;
+    }
+    tr:nth-child(even) {
+      background-color: #e9ecef;
     }
   </style>
 </head>
 <body>
+  <h1 style="text-align:center;">Student Information Table</h1>
 
-  <div class="shadow-box">
-    <h2>Shadow Box 🌟</h2>
-  </div>
-
+  <table>
+    <tr>
+      <th>Roll No</th>
+      <th>Name</th>
+      <th>Class</th>
+      <th>Marks</th>
+    </tr>
+    <tr>
+      <td>01</td>
+      <td>Arjawan</td>
+      <td>10th</td>
+      <td>88</td>
+    </tr>
+    <tr>
+      <td>02</td>
+      <td>Ali</td>
+      <td>10th</td>
+      <td>91</td>
+    </tr>
+    <tr>
+      <td>03</td>
+      <td>Fatima</td>
+      <td>9th</td>
+      <td>85</td>
+    </tr>
+    <tr>
+      <td colspan="3"><strong>Total Students</strong></td>
+      <td><strong>3</strong></td>
+    </tr>
+  </table>
 </body>
 </html>
